# hydroflow

./: Cargo.toml  Dockerfile
benches/benches/: micro_ops.rs
docs/docs/hydroflow/syntax/: surface_ops.gen.md
docs/docs/syntax/: surface_ops.gen.md
hydroflow/: Cargo.toml
hydroflow/examples/deletable_state/: main.rs
hydroflow/examples/hello_world/: main.rs
hydroflow/examples/hello_world2/: main.rs
hydroflow/examples/kvs_bench/: buffer_pool.rs  main.rs  server.rs
hydroflow/examples/kvs_simple/: last_write_wins.rs  main.rs  multi_reg_with_tombstone.rs
hydroflow/examples/networking_patterns/: main.rs
hydroflow/examples/sample/: main.rs
hydroflow/examples/test/: main.rs
hydroflow/src/scheduled/: graph.rs
hydroflow/src/util/: adapters.rs  bag.rs  mod.rs
hydroflow/tests/: datalog_frontend.rs  surface_async.rs  surface_codegen.rs
hydroflow/tests/compile-fail/: surface_anti_join_badtypes.rs  surface_anti_join_badtypes.stderr
hydroflow_datalog_core/src/: join_plan.rs  lib.rs
hydroflow_datalog_core/src/snapshots/: hydroflow_datalog_core__tests__anti_join@datalog_program.snap  hydroflow_datalog_core__tests__anti_join_multiset@datalog_program.snap  hydroflow_datalog_core__tests__anti_join_multiset@surface_graph.snap  hydroflow_datalog_core__tests__join_with_other@datalog_program.snap  hydroflow_datalog_core__tests__join_with_self@datalog_program.snap  hydroflow_datalog_core__tests__persist@datalog_program.snap  (+6 more)
lattices/: Cargo.toml
lattices/src/: algebra.rs  lib.rs  semiring.rs  set_union_with_tombstone.rs  unit.rs
scripts/: build_dist_release.sh
(+23 files in other folders)
