[workspace]

members = [
    "multiplatform_test",
    "hydroflow_internalmacro",
    "hydroflow_lang",
    "hydroflow_macro",
    "hydroflow",
    "hydroflow_datalog_core",
    "hydroflow_datalog",
    "hydro_cli",
    "hydro_cli_examples",
    "hydroflow_cli_integration",
    "benches",
    "relalg",
    "pusherator",
    "variadics",
]

resolver = "2"

[profile.release]
strip = true      # Strip symbols from the binary
# Previously this was "z" to minimize docker binary size while sacrificing performance. But "z"
# doesn't make things that much smaller, `strip` is far more important for binary size. Use "3" for
# performance.
opt-level = 3

[profile.profile]
inherits = "release"
opt-level = 3
debug-assertions = false
overflow-checks = false
debug = true
strip = "none"
#codegen-units = 1
lto = "fat"
incremental = false

#[profile.profile.package."*"]
#inherits = "profile"
#debug = true
#strip = "none"
#incremental = false

